fixed issue where bottom of chart was cut off

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,12 +1,16 @@
-#profiles {
+/*#profiles {
 	width: 100%;
 	height: 500px;
 	overflow: auto;
-}
+}*/
 
 #info-panel {
 	width: 100%;
-	height: 500px;
+}
+
+
+#infoDiv {
+	width: 100%;
 }
 
 #directions {
